Compiled assembly OK